--- a/backend/pratise backend/practice project pin/pin/views/product.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/product.ejs
@@ -46,8 +46,8 @@
         .product .card .part {
             width: 20vw;
             height: 45px;
-            background-color: #E6622B;
-            /* background-color: red; */
+            /* background-color: #E6622B; */
+            background-color:#E6622B;
             display: flex;
             align-items: center;
             justify-content: space-evenly;
@@ -113,7 +113,7 @@
                 <%= getProduct.producttitle %>
             </h1>
 
-            <div class="part">
+            <!-- <div class="part">
                 <div style="display: flex; align-items: center; justify-content: center; width: 3vw; gap: 10px;">
                     <form action="/update-quantity/<%= getProduct._id %>" method="POST">
                         <input type="hidden" name="action" value="decrease">
@@ -128,9 +128,44 @@
                     </form>
                 </div>
                 <a href="#">$<%= getProduct.pPrice %></a>
-                <form action="/add-to-cart/<%= getProduct._id %>" method="POST">
+                <form action="/add-to-cart/<%= getProduct._id %>" method="post">
                     <button style="background-color: #E6622B; color: #fff; border: none; font-size: 2vh;" type="submit">Add to Cart</button>
                 </form>
+
+                <button style="background-color: #E6622B; color: #fff; border: none; font-size: 2vh;" type="submit"><a href="/add-to-cart">Add to Cart2</a></button>
+            </div> -->
+
+            <div class="part">
+                <div style="display: flex; align-items: center; justify-content: center; width: 3vw;background-color:#E6622B; gap: 10px;">
+                    <!-- Form to update quantity -->
+                    <form id="quantityForm" action="/update-quantity/<%= getProduct._id %>" method="POST"
+                        style="display: flex; gap: 10px; align-items: center; justify-content: center; width: 10px;">
+                        <input type="hidden" id="actionInput" name="action" value="increase">
+                        <button style="border: none;" type="button" id="decreaseQuantityBtn"><i
+                                style="background-color:#E6622B; color: #fff; border: 1px solid #E6622B; font-size: 1vw;"
+                                class="ri-subtract-line"></i></button>
+
+                        <h1 id="productQuantity" style="color:#fff; font-size: 1vw;">
+                            <%= getProduct.quantity %>
+                        </h1>
+
+                        <button style="border: none;" type="button" id="increaseQuantityBtn"><i
+                                style="background-color:#E6622B; color: #fff; border: 1px solid #E6622B;"
+                                class="ri-add-line"></i></button>
+                    </form>
+                </div>
+                <a href="#">$<%= getProduct.pPrice %></a>
+
+                <!-- Form to add to cart with the current quantity -->
+                <form id="addToCartForm" action="/add-to-cart/<%= getProduct._id %>" method="post">
+                    <input type="hidden" id="cartQuantity" name="quantity" value="<%= getProduct.quantity %>">
+                    <button style="background-color: #E6622B; color: #fff; border: none; font-size: 2vh;"
+                        type="submit">Add to Cart</button>
+                </form>
+
+                <!-- <button style="background-color: #E6622B; color: #fff; border: none; font-size: 2vh;" type="submit">
+                    <a href="/add-to-cart">Add to Cart2</a>
+                </button> -->
             </div>
 
         </div>
@@ -158,6 +193,34 @@
         </h5>
         <h5>50% OF PROFITS REINVESTED INTO THE TWO GOOD FOUNDATIO</h5>
     </div>
+
+    <script>
+        // JavaScript to handle quantity changes
+        document.getElementById('decreaseQuantityBtn').addEventListener('click', function () {
+            let quantityElement = document.getElementById('productQuantity');
+            let quantity = parseInt(quantityElement.innerText);
+            if (quantity > 1) {
+                quantity -= 1;
+                quantityElement.innerText = quantity;
+                document.getElementById('cartQuantity').value = quantity;
+            }
+        });
+
+        document.getElementById('increaseQuantityBtn').addEventListener('click', function () {
+            let quantityElement = document.getElementById('productQuantity');
+            let quantity = parseInt(quantityElement.innerText);
+            quantity += 1;
+            quantityElement.innerText = quantity;
+            document.getElementById('cartQuantity').value = quantity;
+        });
+
+        // Sync the updated quantity to the add-to-cart form
+        document.getElementById('quantityForm').addEventListener('submit', function (e) {
+            e.preventDefault();
+            document.getElementById('cartQuantity').value = document.getElementById('productQuantity').innerText;
+            document.getElementById('addToCartForm').submit();
+        });
+    </script>
     <% include ./partial/footer.ejs %>
 
 
