update awaded website payment feature

--- a/backend/pratise backend/practice project pin/pin/views/addtocard.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/addtocard.ejs
@@ -1,8 +1,10 @@
 <% include ./partial/header.ejs %>
+
+<!-- addtocard page -->
     <link rel="stylesheet" href="/stylesheets/addtocard.css">
     <a style="text-decoration: none; color:#fff;left: 94%; padding-right: 100px; padding-top: 40px; font-size: 20px; position: fixed; z-index: 999;"
         href="/product"><i class="fa-solid fa-xmark"></i></a>
-    <div class="main" style="background-color: #111; color: #fff; padding-top: 300px;">
+    <div class="main" style="background-color:#111; color: #fff; padding-top: 300px;">
         <div class="card"
             style="display: flex; align-items: center; justify-content: space-between;border-bottom: 1px solid gray; margin: 0px 20px;padding-bottom: 20px;">
             <h1 style="font-size: 2vh; color: gray;">CARD</h1>
