--- a/backend/pratise backend/practice project pin/pin/views/partial/header.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/partial/header.ejs
@@ -82,7 +82,7 @@
                 <a id="cat" href="/donate">Donate</a>
                 <div class="icon">
                     <a id="menu" href="/menu"><i class="ri-menu-line"></i></a>
-                    <a id="card" href="/card"><i class="ri-shopping-cart-2-line"></i></a>
+                    <a id="card" href="/add-to-cart"><i class="ri-shopping-cart-2-line"></i></a>
                    <a id="home" href="/"><i class="fa-solid fa-xmark"></i></a>
                 </div>
             </div>
