--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/addtocard.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/addtocard.css
@@ -67,3 +67,327 @@ html,body{
 
 
 
+
+/* card style */
+
+#svg1{
+    color: #fff;
+    /* margin: 0px 10px; */
+}
+
+.header-nav .nav-part2 a{
+  z-index: 99;
+  color: #cdc9c9;
+}
+
+
+.header-nav .nav-part2 .ri-shopping-cart-2-line{
+  display: none;
+}
+
+
+.header-nav .nav-part2 .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px;
+    height: 50px;
+    width: 190px;
+    background-color: transparent;
+}
+
+.header-nav .nav-part2 .icon #menu{
+    display: none;
+}
+
+.header-nav .nav-part2 .icon #home{
+    display: block;
+}
+
+
+.card-details{
+    min-height: 92vh;
+    width: 100vw;
+    background-color: #111;
+    position: absolute;
+    z-index: 41;
+    opacity: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 230px;
+    /* display:none; */
+  }
+  
+  
+  
+  
+  
+  .card-details h1{
+    font-size: 35px;
+    text-transform: lowercase;
+    padding-bottom: 40px;
+    color:#cdc9c9;
+    font-weight: 100;
+    margin-bottom: 50px;
+  
+  }
+  
+  .card-details h2{
+    border: 2px solid #cdc9c9;
+    border-radius: 30px;
+    padding: 30px 100px;
+    font-size: 25px;
+    text-transform: uppercase;
+    color: #cdc9c9;
+    font-weight: 700;
+  
+  }
+  
+  
+  
+  #scroller{
+    /* background-color: red; */
+    white-space:nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    z-index: 10;
+    border-top: 3px solid #cdc9c9;
+    margin-top: 25px;
+  }
+  
+  
+  #scroller::-webkit-scrollbar{
+    display: none;
+  }
+  
+  
+  #scroller-in{
+    display: inline-block;
+    white-space: nowrap;
+    animation-name: scroll;
+    animation-duration: 25s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  }
+  
+  #scroller h4{
+    display:inline-block;
+    font-size: 110px;
+    font-weight: 900;
+    font-family: gilroy;
+    margin-right: 20px;
+    transition: all linear 0.5s;
+    color:#cdc9c9;
+    text-transform: uppercase;
+  
+  }
+  
+  
+  @keyframes scroll {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
+  
+  
+  
+  #scroller2{
+    /* background-color: red; */
+    white-space:nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    z-index: 10;
+    border-top: 3px solid #cdc9c9;
+  }
+  
+  
+  #scroller2::-webkit-scrollbar{
+    display: none;
+  }
+  
+  
+  #scroller-in2{
+    display: inline-block;
+    white-space: nowrap;
+    animation-name: scroll2;
+    animation-duration: 25s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  }
+  
+  #scroller2 h4{
+    display:inline-block;
+    font-size: 110px;
+    font-weight: 900;
+    font-family: gilroy;
+    margin-right: 20px;
+    transition: all linear 0.5s;
+    color:#cdc9c9;
+    text-transform: uppercase;
+  
+  }
+  
+  @keyframes scroll2 {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(100%);
+    }
+    
+  }
+  
+
+  @media (max-width:600px) {
+    .header-nav .nav-part2 .icon{
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      padding: 0px;
+      height: 40px;
+      width: 100%;
+    }
+
+    /* card style */
+  
+  .card-details{
+    min-height: 50vh;
+    width: 100%;
+    background-color: #111;
+    position: absolute;
+    z-index: 41;
+    opacity: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 25vh;
+}
+
+.card-details h1{
+    font-size: 3vh;
+    text-transform: lowercase;
+    padding-bottom: 40px;
+    color: #cdc9c9;
+    font-weight: 100;
+
+}
+
+.card-details h2{
+    border: 2px solid #cdc9c9;
+    border-radius: 30px;
+    padding: 30px 100px;
+    font-size: 3vw;
+    text-transform: uppercase;
+    color: #cdc9c9;
+    font-weight: 700;
+    margin-bottom: 100px;
+
+}
+
+
+#scroller{
+    white-space:nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    z-index: 10;
+    border-top: 3px solid #cdc9c9;
+}
+
+
+#scroller::-webkit-scrollbar{
+    display: none;
+}
+
+
+#scroller-in{
+    display: inline-block;
+    white-space: nowrap;
+    animation-name: scroll;
+    animation-duration: 25s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+#scroller h4{
+    display:inline-block;
+    font-size: 10vh;
+    font-weight: 900;
+    font-family: gilroy;
+    margin-right: 20px;
+    transition: all linear 0.5s;
+    color:#cdc9c9;
+    text-transform: uppercase;
+
+}
+
+
+@keyframes scroll {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
+
+
+
+  #scroller2{
+    white-space:nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    z-index: 10;
+    border-top: 3px solid #cdc9c9;
+}
+
+
+#scroller2::-webkit-scrollbar{
+    display: none;
+}
+
+
+#scroller-in2{
+    display: inline-block;
+    white-space: nowrap;
+    animation-name: scroll2;
+    animation-duration: 25s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+#scroller2 h4{
+    display:inline-block;
+    font-size: 10vh;
+    font-weight: 900;
+    font-family: gilroy;
+    margin-right: 20px;
+    transition: all linear 0.5s;
+    color:#cdc9c9;
+    text-transform: uppercase;
+
+}
+
+@keyframes scroll2 {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(100%);
+    }
+    
+  }
+
+  }
+
+
+
