--- a/backend/pratise backend/practice project pin/pin/views/menu.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/menu.ejs
@@ -40,6 +40,7 @@
                     <a href="/about">about</a>
                     <a href="/contact">Contact</a>
                     <a href="/donate">Donate</a>
+                    <a href="/OwnOrder">Order</a>
                     <a class="sigbtn" href="#">Sign in</a>
             </div>
 
