--- a/backend/pratise backend/practice project pin/pin/views/lunch.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/lunch.ejs
@@ -67,7 +67,6 @@
         <a id="group" href="/group-order"><i class="fa-solid fa-users-line"></i>group Order</a>
         <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
         <a href="/log-register"><i class="fa-solid fa-user-plus"></i></a>
-
     </div>
 </header>
 </div>
@@ -79,10 +78,10 @@
 
 <div class="product-page lunch-product">
     <div class="card1">
-        <a style="text-decoration: none;color: #111;" href="/products"><h1>Morning</h1></a>
+        <a style="text-decoration: none;color: #111;" href="/morningProduct"><h1>Morning</h1></a>
         <a style="text-decoration: none; font-weight:800;color: #111;" href="/lunch"><h1 style="font-weight: 800;">Lunch</h1></a>
         <a  style="text-decoration: none; font-weight:800;color: #111;" href="/Afternoon"><h1>Afternoon</h1></a>
-        <h1>Evening</h1>
+        <a  style="text-decoration: none; font-weight:800;color: #111;" href="/evening"><h1>Evening</h1></a>
         <h1>Individually Packeaged
             Meals</h1>
         <h1>Bio Disponsable</h1>
