--- a/backend/pratise backend/practice project pin/pin/views/catering.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catering.ejs
@@ -64,7 +64,7 @@
     <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg" alt="">
 </div>
 <div class="page2">
-    <a style="text-decoration: none;" href="/products"><div class="card card1">
+    <a style="text-decoration: none;" href="/morningProduct"><div class="card card1">
         <h3>MORNING</h3>
     </div></a>
 
@@ -77,10 +77,10 @@
         
         <h3>AFTERNOON</h3>
     </div></a>
-    <div class="card card4">
+    <a style="text-decoration: none;" href="/evining"><div class="card card4">
 
         <h3>EVENING</h3>
-    </div>
+    </div></a>
     <div class="card card5">
         <h3>BIO DISPOSABLES</h3>
     </div>
