--- a/backend/pratise backend/practice project pin/pin/views/checkout.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/checkout.ejs
@@ -2,6 +2,12 @@
     h1 {
         text-transform: uppercase;
     }
+
+
+    #UpdateBtn:hover{
+        background-color: rgb(17, 175, 17);
+        color: yellow;
+    }
 </style>
 
 <nav style="display: flex; align-items: center;justify-content: space-between;">
@@ -72,27 +78,31 @@
                 <div class="card">
                     <div class="card2">
                         <div class="container" >
-                            <h1 style="font-size: 1vw;">Updated Address Information</h1>
                     
                             <!-- Add more HTML as needed -->
                     
-                            <form style="display: flex; align-items:start; justify-content: space-between; flex-direction: row;flex-wrap: wrap; font-size: 1vw; width: 40%;" action="/add-to-cart2" method="POST">
+                            <form style="display: flex; align-items: start;justify-content: space-around; flex-direction: column; gap: 30px; margin-left: 20px; font-size: 1vw;"  action="/add-to-cart2" method="POST">
+
+                                <div>
                                 <label for="address">Address:</label>
-                                <input type="text" id="address" name="address" value="<%= user.address %>" required>
+                                <input style="font-size: 0.9vw; border: none;border-bottom: 1px solid #111; " type="text" id="address" name="address" value="<%= user.address %>" required>
                                 
-                                <label for="country">Country:</label>
-                                <input type="text" id="country" name="country" value="<%= user.country %>" required>
+                                <label style="margin-left: 20px;" for="state">State:</label>
+                                <input style="font-size: 0.9vw;  border: none;border-bottom: 1px solid #111; width: 20%" type="text" id="state" name="state" value="<%= user.state %>" required>
+
+                                <label style="margin-left: 20px;"   for="country">Country:</label>
+                                <input style="font-size:0.9vw;  border: none;border-bottom: 1px solid #111; width: 10%;" type="text" id="country" name="country" value="<%= user.country %>" required>
                                 
-                                <label for="state">State:</label>
-                                <input type="text" id="state" name="state" value="<%= user.state %>" required>
+                            </div>
+                            <div>
                                 
-                                <label for="postcode">Postcode:</label>
-                                <input type="text" id="postcode" name="postcode" value="<%= user.pastcode %>" required>
+                                <label for="postcode">Pin code:</label>
+                                <input style="font-size: 0.9vw;  border: none;border-bottom: 1px solid #111; width: 12%;" type="text" id="postcode" name="postcode" value="<%= user.pastcode %>" required>
                                 
-                                <label for="phone_number">Phone Number:</label>
-                                <input type="text" id="phone_number" name="phone_number" value="<%= user.phone_number %>" required>
-                                
-                                <button type="submit">Update Address</button>
+                                <label style="margin-left: 20px;"  for="phone_number">Phone Number:</label>
+                                <input style="font-size: 0.9vw;  border: none;border-bottom: 1px solid #111; width: 20%;" type="text" id="phone_number" name="phone_number" value="<%= user.phone_number %>" required>
+                            </div>
+                                <button id="UpdateBtn" style="padding: 7px 20px; border-radius: 20px;" type="submit">Update Address</button>
                             </form>
                     
                         </div>
