--- a/backend/pratise backend/practice project pin/pin/views/morningProduct.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/morningProduct.ejs
@@ -79,10 +79,10 @@
 
 <div class="product-page">
     <div class="card1">
-        <a style="text-decoration: none; font-weight:800;color: #111;" href="/products"><h1 style="font-weight: 800;">Morning</h1></a>
+        <a style="text-decoration: none; font-weight:800;color: #111;" href="/morningProduct"><h1 style="font-weight: 800;">Morning</h1></a>
         <a style="text-decoration: none; font-weight:800;color: #111;" href="/lunch"><h1>Lunch</h1></a>
         <a  style="text-decoration: none; font-weight:800;color: #111;" href="/Afternoon"><h1>Afternoon</h1></a>
-        <h1>Evening</h1>
+        <a  style="text-decoration: none; font-weight:800;color: #111;" href="/evining"><h1>Evening</h1></a>
         <h1>Individually Packeaged
             Meals</h1>
         <h1>Bio Disponsable</h1>
