--- a/backend/pratise backend/practice project pin/pin/views/addtocard.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/addtocard.ejs
@@ -37,22 +37,7 @@
                                 <input type="hidden" name="action" value="increase">
                                 <button  style="border: none;" type="submit"><i style="background-color:#111; color: #fff; border: 1px solid #111;" class="ri-add-line"></i></button>
                             </form>
-                                <!-- Decrease quantity button -->
-                                <!-- <button onclick="updateQuantity('<%= cartItem.productId._id %>', 'decrease')"
-                                    style="border: none;">
-                                    <i style="background-color: #111; color: #fff; border: 1px solid #111;"
-                                        class="ri-subtract-line"></i>
-                                </button>
-                                <h1 id="quantity-<%= cartItem.productId._id %>"
-                                    style="font-size: 1vw; font-weight: 400;">
-                                    <%= cartItem.quantity %>
-                                </h1> -->
-                                <!-- Increase quantity button -->
-                                <!-- <button onclick="updateQuantity('<%= cartItem.productId._id %>', 'increase')"
-                                    style="border: none;">
-                                    <i style="background-color: #111; color: #fff; border: 1px solid #111;"
-                                        class="ri-add-line"></i>
-                                </button> -->
+                                
                             </div>
                             <div class="amt" style="display: flex; align-items: center; gap: 50px;">
                                 <h1 style="font-size: 20px; font-weight: 100;">$<%= cartItem.productId.pPrice %>
@@ -186,7 +171,12 @@
                 </div>
     </div>
 
-    <script>
+    <% include ./partial/footer.ejs %>
+
+
+
+
+    <!-- <script>
         // function updateQuantity(productId, action) {
         //     fetch(`/update-quantity/${productId}`, {
         //         method: 'POST',
@@ -206,7 +196,7 @@
         //     })
         //     .catch(error => console.log('Error:', error));
         // }
-        // </script>
+        // </script> -->
 
 
 
@@ -317,4 +307,4 @@
 
     </script> -->
 
-    <% include ./partial/footer.ejs %>
+                               
